--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,11 @@
 	<artifactId>tasks-backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>tasks-backend</name>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 	<description>A very simple task management tool</description>
 
 	<properties>
-		<java.version>17</java.version>
+		<java.version>11</java.version>
 		<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
 		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
 		<sonar.jacoco.reportPath>${project.basedir}/target/jacoco.exec</sonar.jacoco.reportPath>
